<resources>
    <string name="app_name">ZebraScan</string>

    <!-- Toolbar titles -->
    <string name="action_forward">Forward</string>
    <string name="action_backward">Back</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>

    <!-- About text -->
    <string name="log_title">Most Recent Logs (Not real-time)</string>
    <string name="log_error">Error retrieving logs</string>

    <!-- DataWedge -->
    <string name="activity_intent_filter_action">com.wb.zebrascan.ACTION</string>
    <string name="activity_action_from_service">com.wb.zebrascan.service.ACTION</string>
    <string name="datawedge_intent_key_source">com.symbol.datawedge.source</string>
    <string name="datawedge_intent_key_label_type">com.symbol.datawedge.label_type</string>
    <string name="datawedge_intent_key_data">com.symbol.datawedge.data_string</string>

    <!-- Activity Labels -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>

    <!-- General Preferences -->
    <string name="about_title">About</string>
    <string name="about_summary">About this application</string>

    <!-- Security Preferences -->
    <string name="cookies_exit_title">Clear Cookies on Exit</string>
    <string name="cookies_exit_summary">Clears application cookies when the application is exited.</string>
    <string name="cookies_exit_on">Cookies will be cleared when the application is exited.</string>
    <string name="cookies_exit_off">Cookies will not be cleared when the application is exited.</string>

    <string name="software_scan_button">Software scan button</string>
    <string name="toggle_scanner">Toggle Scanner</string>
    <string name="datawedge_missing">DataWedge is not installed. This application will not function!</string>

</resources>
