<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_back"
        android:icon="@drawable/ic_arrow_back_black_24dp"
        android:title="@string/action_backward"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/ic_arrow_forward_black_24dp"
        android:title="@string/action_forward"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/action_refresh"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/action_settings"
        app:showAsAction="always" />
</menu>